# ReadModules

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeUserSkel.cmake  CMakeUserSkel.txt  README.md  index.html  module-header.txt  params.json
Modules/BatchTest/: CMakeLists.txt
Modules/BatchTest/src/: BatchTest.cpp  BatchTest.h  BatchTest.json
Modules/Binarization/: CMakeLists.txt  d.txt
Modules/Binarization/src/: BinarizationPlugin.cpp  BinarizationPlugin.h  BinarizationPlugin.json
Modules/DeepMerge/: CMakeLists.txt
Modules/DeepMerge/src/: DeepMergePlugin.cpp  DeepMergePlugin.h  DeepMergePlugin.json
Modules/FocusMeasure/: CMakeLists.txt
Modules/FocusMeasure/src/: FocusPlugin.cpp  FocusPlugin.h  FocusPlugin.json
Modules/Forms/: CMakeLists.txt  formsPlugin.qrc
Modules/Forms/src/: Forms.cpp  Forms.h  Forms.json
Modules/Layout/: CMakeLists.txt
Modules/Layout/src/: LayoutPlugin.cpp  LayoutPlugin.h  LayoutPlugin.json
Modules/PageVis/: CMakeLists.txt  d.txt  pageVis.qrc
Modules/PageVis/src/: PageData.cpp  PageData.h  PageDock.cpp  PageDock.h  PageViewport.cpp  PageViewport.h  PageVisPlugin.cpp  PageVisPlugin.h  PageVisPlugin.json
Modules/PageXml/: CMakeLists.txt  PageXml.qrc
Modules/PageXml/src/: PageXmlPlugin.cpp  PageXmlPlugin.h  PageXmlPlugin.json
Modules/ReadConfig/: CMakeLists.txt
Modules/ReadConfig/src/: ReadConfig.cpp  ReadConfig.h  ReadConfig.json
Modules/Skew/: CMakeLists.txt
Modules/Skew/src/: SkewPlugin.cpp  SkewPlugin.h  SkewPlugin.json
Modules/WriterIdentification/: CMakeLists.txt  writerIdentificationPlugin.qrc
Modules/WriterIdentification/src/: WIDatabase.cpp  WIDatabase.h  WriterIdentification.cpp  WriterIdentification.h  WriterIdentificationDatabase.cpp  WriterIdentificationDatabase.h  WriterIdentificationPlugin.cpp  WriterIdentificationPlugin.h  WriterIdentificationPlugin.json
cmake/: DependencyCollector.config.cmake.in  DependencyCollector.py  Utils.cmake  project.vcxproj.user.in
config/: Doxyfile  publish-doxygen  travisci_rsa.enc  travisci_rsa.pub
html/: _batch_test_8cpp.html  _batch_test_8cpp__incl.map  _batch_test_8cpp__incl.md5  _batch_test_8h.html  _batch_test_8h__dep__incl.map  _batch_test_8h__dep__incl.md5  _batch_test_8h__incl.map  _batch_test_8h__incl.md5  _batch_test_8h_source.html  _binarization_plugin_8cpp.html  _binarization_plugin_8cpp__incl.map  _binarization_plugin_8cpp__incl.md5  _binarization_plugin_8h.html  _binarization_plugin_8h__dep__incl.map  _binarization_plugin_8h__dep__incl.md5  _binarization_plugin_8h__incl.map  _binarization_plugin_8h__incl.md5  _binarization_plugin_8h_source.html  _focus_plugin_8cpp.html  _focus_plugin_8cpp__incl.map  _focus_plugin_8cpp__incl.md5  _focus_plugin_8h.html  _focus_plugin_8h__dep__incl.map  _focus_plugin_8h__dep__incl.md5  _focus_plugin_8h__incl.map  _focus_plugin_8h__incl.md5  _focus_plugin_8h_source.html  _forms_8cpp.html  _forms_8cpp__incl.map  _forms_8cpp__incl.md5  _forms_8h.html  _forms_8h__dep__incl.map  _forms_8h__dep__incl.md5  _forms_8h__incl.map  _forms_8h__incl.md5  _forms_8h_source.html  _layout_plugin_8cpp.html  _layout_plugin_8cpp__incl.map  _layout_plugin_8cpp__incl.md5  _layout_plugin_8h.html  (+413 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+29 more)
manuals/: CodeCov.md  Form-Table-Matching.md  Layout Analysis.md  Training Super Pixels.md
